[package]
name = "pixel_punch"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
walkdir = "2.3.2"
serde = "1.0"
serde_yaml = "0.9.27"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.11.3"}#, features = ["dynamic_linking"] }
bevy_tile_atlas = "0.7.0"
bevy_prototype_lyon = "0.9.0"
strum = "0.25"
strum_macros = "0.25"
bevy_embedded_assets = "0.8.0"
serde = "1.0"
serde_yaml = "0.9.27"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
